--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "21.1.2"
 
     defaultConfig {
-        applicationId "com.example.team8capstone.vuzixtestapplication"
+        applicationId "com.example.team8capstone.vuzixfoley"
         minSdkVersion 15
         targetSdkVersion 21
         versionCode 1
