--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,11 +5,11 @@
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
-        android:label="@string/app_name"
+        android:label="VuzixFoley"
         android:theme="@style/AppTheme" >
         <activity
             android:name="com.example.team8capstone.vuzixfoley.MainActivity"
-            android:label="@string/app_name" >
+            android:label="VuzixFoley" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
